# marble

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE_OVERVIEW.md  CONFIGURABLE_PARAMETERS.md  Dockerfile  FAILEDTESTS.md  HIGHLEVEL_PIPELINE_TUTORIAL.md  ML_PARADIGMS_HANDBOOK.md  README.md  ROADMAP.md  TODO.md  TROUBLESHOOTING.md  TUTORIAL.md  activation_visualization.py  advanced_gpt.py  adversarial_dataset.py  adversarial_dataset_wrapper.py  adversarial_generator.py  adversarial_learning.py  adversarial_utils.py  analysedpyfiles.md  async_gradient_accumulator.py  async_utils.py  attention_codelets.py  attention_utils.py  autoencoder_learning.py  autoencoder_pairs_pipeline.py  autoencoder_pipeline.py  backup_utils.py  benchmark_autograd_vs_marble.py  benchmark_config_training.py  benchmark_dream_consolidation.py  benchmark_graph_precompile.py  benchmark_parallel_wanderers.py  benchmark_remote_wanderer_latency.py  benchmark_sac_vs_baseline.py  benchmark_super_evolution.py  bit_tensor_dataset.py  bit_tensor_streaming_dataset.py  (+188 more)
core/: init_seed.py  message_passing.py
docs/: COMPATIBILITY.md  CRYPTO_GUIDELINES.md  api_audit.md  attention_research.md  conf.py  cpu_fallback_catalog.md  dataset_encryption.md  distributed_training.md  graph_builder_utilities.md  hidden_state_serialization.md  hrl_research.md  index.rst  macro_steps_design.md  model_refresh_strategy.md  neural_pathway_gui_design.md  neuroblitz_modules.md  performance_results.md  pipeline_cache_design.md  public_api.md  python_compatibility.md  pytorch_conversion.md  rollback_design.md
(+450 files in other folders)
