[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "marble"
version = "0.1.0"
description = "Modular neural architecture with Neuronenblitz"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Marble Contributors"}]
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

